# demoinfogo

./: .gitignore  .gitmodules  Cargo.toml  game_events.txt  protoc.txt  requirements.txt  setup.py
csgoproto/: Cargo.toml
csgoproto/src/: cstrike15_gcmessages.rs  cstrike15_usermessages.rs  lib.rs  netmessages.rs  steammessages.rs
demoinfogo/: __init__.py  cstrike15_usermessages_public_pb2.py  demodump.py  demofile.py  file.py  netmessages_public_pb2.py
demoinfogo/proto/: base_gcmessages_pb2.py  cstrike15_gcmessages_pb2.py  cstrike15_usermessages_pb2.py  econ_gcmessages_pb2.py  gcsdk_gcmessages_pb2.py  gcsystemmsgs_pb2.py  netmessages_pb2.py  network_connection_pb2.py  steamdatagram_messages_pb2.py  steammessages_pb2.py
src/: cmd.rs  error.rs  file.rs  frame.rs  lib.rs  tables.rs  vectors.rs
src/message/: kind.rs  mod.rs
src/read/: bits.rs  ext.rs  mod.rs
test-data/: not-ok.dem  ok.dem
